# sfu-day-finder

./: README.md  pyproject.toml
src/sfu_day_finder/: __init__.py
