[project]
name = "sfu-day-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sfu-api>=0.1.0",
    "typer>=0.12.5",
]

[project.scripts]
app = "sfu_day_finder:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
